# cw_django_email_sender

./: .env.sample  README.md  data.json  pyproject.toml
blog/: admin.py  urls.py  views.py
blog/templates/: blog_list.html
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
mailsender/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailsender/management/commands/: send_mailing.py
mailsender/migrations/: 0001_initial.py  0002_mailingattempt_mailing.py  0003_client_owner_mailinglist_owner.py  0004_alter_mailinglist_options.py  0005_message_owner.py  0006_blog.py
mailsender/templates/mailsender/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailingattempt_list.html  mailinglist_confirm_delete.html  mailinglist_detail.html  mailinglist_form.html  mailinglist_list.html  mailsender_dashboard.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailsender/templates/mailsender/includes/: inc_dashboard.html  inc_footer.html  inc_menu.html  inc_sidebar.html
mailsender/templatetags/: tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py
users/templates/: edit_profile.html  login.html  password_reset.html  password_reset_done.html  user_detail.html  users_list.html
users/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_form.html
users/templates/users/: user_form.html
